platform/vault/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: nvidia-ida
    app.kubernetes.io/component: vault
